tests/paczka1/small_fuzzy/21051919.err
Error in line 4: pPuog A168 53,5
Error in line 7: Cck94 S403 55,0
Error in line 2: A184 S403 10,7
Error in line 12: pPuog S403 49,15
Error in line 6: pPuog A184 49,2
